2001-12-07  Alex Larsson  <alexl@redhat.com>

	* button-widget.[ch]:
	Draw buttons using gdk-pixbuf instead of libart, should
	be faster and more correct.

	* panel-widget.c (make_background): Take a rowstride arg.
	(queue_resize_on_all_applets): New function
	(send_draw_to_all_applets): Use pixbuf
	(panel_widget_change_params): Queue resize on applets.

2001-12-08  Glynn Foster  <glynn.foster@sun.com>

	* gnome-run.c, gnome-run.h, menu.c,
	panel.c, session.c:  Whack gnome-run button applet thing which
	serves very little purpose.

2001-12-08  Glynn Foster  <glynn.foster@sun.com>

	* launcher.c: (setup_button): Make adding launchers not crash.

Fri Dec 07 14:48:01 2001  George Lebl <jirka@5z.com>

	* xstuff.[ch], basep-widget.c, foobar-widget.c: add an extra type
	  for autohide panels so that windowmanagers can behave more nicely.

2001-12-07  Alexander Larsson  <alla@lysator.liu.se>

	* launcher.c (launcher_file_name):
	mkdir launcer directory if it doesn't exist.

2001-12-06  Alexander Larsson  <alla@lysator.liu.se>

	* panel-widget.c:
	Fixed off-by-one pixel error with expand_major that made broke
	switching between horz/vertical with a tasklist at the end.

2001-12-06  Mark McLoughlin  <mark@skynet.ie>

	* session.c: (session_read_global_config): fix sillys.

2001-12-06  Mark McLoughlin  <mark@skynet.ie>

	* session.c: (session_read_global_config): cast to
	GConfEntry. Weird - gconf does this itself, but it seems
	to break some things.

2001-12-06  Alexander Larsson  <alla@lysator.liu.se>

	* launcher.c (launcher_save):
	launcher_get_unique_file renamed to launcher_get_unique_uri,
	now returns file: uri.

Wed Dec 05 19:04:58 2001  George Lebl <jirka@5z.com>

	* xstuff.[ch], basep-widget.[ch], foobar-widget.c:  Set the WM_STRUT
	  hint for panels

2001-12-05  Alex Larsson  <alexl@redhat.com>

	* launcher.c (create_launcher):
	Don't only load from file: uri's. This makes it at least do something
	for program: uris.
