@@ -388,7 +388,10 @@ activate_app_def (GtkWidget *widget, const char *item_loc)
 		char *curdir = g_get_current_dir ();
 		chdir (g_get_home_dir ());
 
-		gnome_desktop_item_launch (item, 0, NULL, NULL);
+		gnome_desktop_item_launch (item,
+					   NULL /* file_list */,
+					   0 /* flags */,
+					   NULL /* error */);
 		gnome_desktop_item_unref (item);
 
 		chdir (curdir);
