@@ -1,3 +1,8 @@
+Sat Dec 08 11:28:37 2001  George Lebl <jirka@5z.com>
+
+	* gnome-run.c, launcher.c, menu.c, swallow.c:  Use the new desktop
+	  item launch api.
+
 2001-12-07  Alex Larsson  <alexl@redhat.com>
 
 	* button-widget.[ch]:
